--- a/package.json
+++ b/package.json
@@ -9,6 +9,13 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/aidojs/aido-cron.git"
+  },
+  "bugs": {
+    "url": "https://github.com/aidojs/aido-cron/issues"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
